workloads/infra-test-react/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-test-react
  labels:
    app: infra-test-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infra-test-react
  template:
    metadata:
      labels:
        app: infra-test-react
    spec:
      imagePullSecrets:
        - name: ghcr-login
      volumes:
        - name: nginx-config
          configMap:
            name: infra-test-react-nginx
      containers:
        - name: app
          image: ghcr.io/zubeyranwar/infra-test-react:main
          imagePullPolicy: Always
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
