workloads/infra-test-react/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-test-react
spec:
  selector:
    app: infra-test-react
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
