workloads/infra-test-react/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-test-react
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: react-test.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-test-react
                port:
                  number: 80
  tls:
    - hosts:
        - react-test.example.com
      secretName: infra-test-react-tls
